--- a/Tienda/Site.Master
+++ b/Tienda/Site.Master
@@ -146,6 +146,7 @@
     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
     <script src="js/bootstrap-select.js"></script>
+    <script src="js/gistfile1.js"></script>
     <!-- JS Part End-->
 
 </body>
