--- a/Tienda/Site.Master
+++ b/Tienda/Site.Master
@@ -73,7 +73,8 @@
                                     <li><a href="register.html">Register</a></li>--%>
                                     <li>
                                         <asp:Label ID="lbl18" runat="server"></asp:Label>
-                                        <asp:Button ID="btnLogOff" runat="server" Text="Cerrar Sesion" OnClick="btnLogOff_Click" />
+                                        <asp:Button ID="btnUsuarios" runat="server" Text="Usuarios" ForeColor="Black" OnClick="btnUsuarios_Click" />
+                                        <asp:Button ID="btnLogOff" runat="server" Text="Cerrar Sesion" ForeColor="Black" OnClick="btnLogOff_Click" />
                                     </li>
                                 </ul>
                             </div>
@@ -104,7 +105,7 @@
                             <ul class="nav navbar-nav navbar-static-top">
                                 <li><a class="home_link" title="Inicio" href="Default.aspx"><span>Inicio</span></a></li>
                                 <li class="contact-link"><a href="Default.aspx">Armar Pedido</a></li>
-                                <li class="dropdown information-link"><a>Paginas</a>
+                                <%--<li class="dropdown information-link"><a>Paginas</a>
                                     <div class="dropdown-menu">
                                         <ul>
                                             <li><a href="Default.aspx">Armar Pedido</a></li>
@@ -115,7 +116,7 @@
                                     </div>
                                 </li>
                                 <li class="contact-link"><a href="Contact.aspx">Contacto</a></li>
-                                <li class="contact-link"><a href="About.aspx">Nosotros</a></li>
+                                <li class="contact-link"><a href="About.aspx">Nosotros</a></li>--%>
                                 <li class="contact-link"><a href="RealizarPedido.aspx">Carrito Actual</a></li>
                                 <li class="contact-link"><a href="ListarPedidos.aspx">Pedidos Realizados</a></li>
                                 <li class="custom-link-right"><a href="RealizarPedido.aspx">Realizar PEDIDO</a></li>
